create github pages

--- a/page6.html
+++ b/page6.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">site maker</a></section><section class="mbr-section form1 cid-rT3ebcsynk" id="form1-16">
+<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section class="mbr-section form1 cid-rT3ebcsynk" id="form1-16">
 
     
 
@@ -74,7 +74,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="aO5FA5w5StUhyJGII7YIEIXsihrys1fjEcDkE6TCf6KzX+z65hQJGxfJSFk3gmxGq4DAIVqHygaO3Ve0H23ZHbPLddlNh+ky/S91yiQ9EZggrsvtX2SqHeqdHOnyEKPG">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="mULsNGWBfTGlGXETkHyOvzxRVYyW2ugcTKWS6NaznsYVvagLW0FdFLmwtE2c9yd5Zoj3Yy9fxzNbIsD3abEX7gBllhmi8CDy0uYgrYSfssFQMcYmMpPbQONgwAdv3BYl">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">We have received your order! We will get to you soon!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
